[package]
name = "rustsv"
description = "A customizable CSV data parser"
readme = "README.md"
repository = "https://github.com/fatalcenturion/RSV"
version = "0.1.1"
authors = ["fatalcenturion <tom.b.2k2@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["nostd", "std"]
nostd = []
std = []
[dependencies]
