[package]
name = "rustsv"
description = "A customizable CSV data parser"
readme = "README.md"
repository = "https://github.com/fatalcenturion/RSV"
version = "0.1.4"
authors = ["fatalcenturion <tom.b.2k2@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
http = ["reqwest/blocking"]

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking"] }